# sshade

./: CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
.interface-design/: system.md
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: chats.rs  lib.rs  main.rs  secrets.rs  ssh.rs
src/components/: AiPanel.tsx  AuditModal.tsx  ConnectionForm.tsx  EditProfileModal.tsx  QuickAsk.tsx  SettingsModal.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx  Terminal.tsx
src/lib/: agent-exec.ts  agent.ts  ai-client.ts  ai-settings.ts  audit-store.ts  chat-store.ts  context-mode.ts  layout.ts  providers.ts  redact.ts  remote-shell.ts  safe-commands.ts  secret-store.ts  server-profiles.ts  ssh.ts  themes.ts
