[package]
name = "sshade"
version = "0.1.0"
description = "SSH terminal with AI integration"
authors = ["sshade contributors"]
edition = "2021"

[lib]
name = "sshade_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# Async runtime
tokio = { version = "1", features = ["full"] }

# SSH client
russh = "0.50"

# Utilities
anyhow = "1"
bytes = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"

# Persistent chat history. `bundled` compiles SQLite from source so there's
# no system dependency on any platform / CI runner.
rusqlite = { version = "0.32", features = ["bundled"] }

# OS credential manager (Windows Credential Manager / macOS Keychain /
# Linux Secret Service) for API keys & passphrases.
keyring = { version = "3", features = [
  "apple-native",
  "windows-native",
  "sync-secret-service",
  "crypto-rust",
] }
